clap_derive/tests/ui/parse_empty_try_from_os.stderr
error: you must set parser for `try_from_os_str` explicitly
  --> $DIR/parse_empty_try_from_os.rs:14:18
   |
14 |     #[clap(parse(try_from_os_str))]
   |                  ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/parse_empty_try_from_os.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
